src/test/ui/nll/issue-47388.stderr
error[E0594]: cannot assign through `&`-reference `fancy_ref`
  --> $DIR/issue-47388.rs:18:5
   |
LL |     let fancy_ref = &(&mut fancy);
   |                     ------------- help: consider changing this to be a mutable reference: `&mut`
LL |     fancy_ref.num = 6; //~ ERROR E0594
   |     ^^^^^^^^^^^^^^^^^ cannot assign through `&`-reference

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
